--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "fs": "^0.0.1-security",
     "json2csv": "^5.0.7",
     "node": "^19.3.0",
-    "promise": "^8.3.0",
-    "puppeteer": "^19.5.0",
-    "puppeteer-chromium-resolver": "^20.0.0",
+    "puppeteer": "^21.6.1",
+    "puppeteer-core": "^21.6.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "request": "^2.88.2",
