--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "json2csv": "^5.0.7",
     "node": "^19.3.0",
     "puppeteer": "^21.6.1",
+    "puppeteer-chromium-resolver": "^21.0.0",
     "puppeteer-core": "^21.6.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
